update translations (spanish)

--- a/Self Analytics/Self Analytics/Localizable.xcstrings
+++ b/Self Analytics/Self Analytics/Localizable.xcstrings
@@ -2,10 +2,16 @@
   "sourceLanguage" : "en",
   "strings" : {
     "%@" : {
-
+      "shouldTranslate" : false
     },
     "%@ Chart" : {
       "localizations" : {
+        "es-419" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "%@ Cuadro"
+          }
+        },
         "es-US" : {
           "stringUnit" : {
             "state" : "translated",
@@ -16,6 +22,12 @@
     },
     "%@ Mbps" : {
       "localizations" : {
+        "es-419" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "%@ Mbps"
+          }
+        },
         "es-US" : {
           "stringUnit" : {
             "state" : "translated",
@@ -38,16 +50,23 @@
             "value" : "%@: %@"
           }
         }
-      }
+      },
+      "shouldTranslate" : false
     },
     "%@%%" : {
-
+      "shouldTranslate" : false
     },
     "%lld" : {
-
+      "shouldTranslate" : false
     },
     "%lld points" : {
       "localizations" : {
+        "es-419" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "%lld puntos"
+          }
+        },
         "es-US" : {
           "stringUnit" : {
             "state" : "translated",
@@ -57,19 +76,77 @@
       }
     },
     "%lld%%" : {
-
+      "localizations" : {
+        "es-419" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "%lld%%"
+          }
+        },
+        "es-US" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "%lld%%"
+          }
+        }
+      }
     },
     "📱" : {
-
+      "localizations" : {
+        "es-419" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "📱"
+          }
+        },
+        "es-US" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "📱"
+          }
+        }
+      }
     },
     "📱 %@" : {
-
+      "localizations" : {
+        "es-419" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "📱 %@"
+          }
+        },
+        "es-US" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "📱 %@"
+          }
+        }
+      }
     },
     "4" : {
-
+      "localizations" : {
+        "es-419" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "4"
+          }
+        },
+        "es-US" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "4"
+          }
+        }
+      }
     },
     "App Version: %@" : {
       "localizations" : {
+        "es-419" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Versión de la aplicación: %@"
+          }
+        },
         "es-US" : {
           "stringUnit" : {
             "state" : "translated",
@@ -86,6 +163,12 @@
             "value" : "Battery Level: %1$lld percent%2$@"
           }
         },
+        "es-419" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Nivel de batería: %lld percent%@"
+          }
+        },
         "es-US" : {
           "stringUnit" : {
             "state" : "translated",
@@ -96,6 +179,12 @@
     },
     "Build Number: %@" : {
       "localizations" : {
+        "es-419" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Número de compilación: %@"
+          }
+        },
         "es-US" : {
           "stringUnit" : {
             "state" : "translated",
@@ -106,6 +195,12 @@
     },
     "Clearing all data, please wait" : {
       "localizations" : {
+        "es-419" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Borrando todos los datos, por favor espere"
+          }
+        },
         "es-US" : {
           "stringUnit" : {
             "state" : "translated",
@@ -116,6 +211,12 @@
     },
     "Clearing in progress" : {
       "localizations" : {
+        "es-419" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Limpieza en curso"
+          }
+        },
         "es-US" : {
           "stringUnit" : {
             "state" : "translated",
@@ -126,6 +227,12 @@
     },
     "Comprehensive device health monitoring with detailed metrics" : {
       "localizations" : {
+        "es-419" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Monitoreo integral del estado del dispositivo con métricas detalladas"
+          }
+        },
         "es-US" : {
           "stringUnit" : {
             "state" : "translated",
@@ -136,6 +243,12 @@
     },
     "Configure app preferences and manage data" : {
       "localizations" : {
+        "es-419" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Configurar las preferencias de la aplicación y administrar los datos"
+          }
+        },
         "es-US" : {
           "stringUnit" : {
             "state" : "translated",
@@ -146,6 +259,12 @@
     },
     "Current battery status" : {
       "localizations" : {
+        "es-419" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Estado actual de la batería"
+          }
+        },
         "es-US" : {
           "stringUnit" : {
             "state" : "translated",
@@ -156,6 +275,12 @@
     },
     "Current memory consumption" : {
       "localizations" : {
+        "es-419" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Consumo de memoria actual"
+          }
+        },
         "es-US" : {
           "stringUnit" : {
             "state" : "translated",
@@ -166,6 +291,12 @@
     },
     "Current network connection type" : {
       "localizations" : {
+        "es-419" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Tipo de conexión de red actual"
+          }
+        },
         "es-US" : {
           "stringUnit" : {
             "state" : "translated",
@@ -176,6 +307,12 @@
     },
     "Device Health" : {
       "localizations" : {
+        "es-419" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Estado del dispositivo"
+          }
+        },
         "es-US" : {
           "stringUnit" : {
             "state" : "translated",
@@ -192,6 +329,12 @@
             "value" : "Device Health Score: %1$lld out of 100, %2$@"
           }
         },
+        "es-419" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Puntuación de salud del dispositivo: %lld de 100, %@"
+          }
+        },
         "es-US" : {
           "stringUnit" : {
             "state" : "translated",
@@ -202,6 +345,12 @@
     },
     "Device Health Widget" : {
       "localizations" : {
+        "es-419" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Widget de salud del dispositivo"
+          }
+        },
         "es-US" : {
           "stringUnit" : {
             "state" : "translated",
@@ -212,6 +361,12 @@
     },
     "Device Metrics" : {
       "localizations" : {
+        "es-419" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Métricas del dispositivo"
+          }
+        },
         "es-US" : {
           "stringUnit" : {
             "state" : "translated",
@@ -222,6 +377,12 @@
     },
     "Device Model: %@" : {
       "localizations" : {
+        "es-419" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Modelo del dispositivo: %@"
+          }
+        },
         "es-US" : {
           "stringUnit" : {
             "state" : "translated",
@@ -232,6 +393,12 @@
     },
     "Enable or disable push notifications for device alerts" : {
       "localizations" : {
+        "es-419" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Habilitar o deshabilitar las notificaciones push para las alertas del dispositivo"
+          }
+        },
         "es-US" : {
           "stringUnit" : {
             "state" : "translated",
@@ -242,6 +409,12 @@
     },
     "Error" : {
       "localizations" : {
+        "es-419" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Error"
+          }
+        },
         "es-US" : {
           "stringUnit" : {
             "state" : "translated",
@@ -252,6 +425,12 @@
     },
     "Export in progress" : {
       "localizations" : {
+        "es-419" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Exportación en curso"
+          }
+        },
         "es-US" : {
           "stringUnit" : {
             "state" : "translated",
@@ -262,6 +441,12 @@
     },
     "Exporting data, please wait" : {
       "localizations" : {
+        "es-419" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Exportando datos, por favor espere"
+          }
+        },
         "es-US" : {
           "stringUnit" : {
             "state" : "translated",
@@ -272,6 +457,12 @@
     },
     "Health Score: %lld" : {
       "localizations" : {
+        "es-419" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Puntuación de salud: %lld"
+          }
+        },
         "es-US" : {
           "stringUnit" : {
             "state" : "translated",
@@ -282,6 +473,12 @@
     },
     "Health Score: %lld out of 100" : {
       "localizations" : {
+        "es-419" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Puntuación de salud: %lld sobre 100"
+          }
+        },
         "es-US" : {
           "stringUnit" : {
             "state" : "translated",
@@ -292,6 +489,12 @@
     },
     "Memory Usage: %lld percent" : {
       "localizations" : {
+        "es-419" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Uso de memoria: %lld por ciento"
+          }
+        },
         "es-US" : {
           "stringUnit" : {
             "state" : "translated",
@@ -302,6 +505,12 @@
     },
     "Monitor your device's health at a glance." : {
       "localizations" : {
+        "es-419" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Supervise la salud de su dispositivo de un vistazo."
+          }
+        },
         "es-US" : {
           "stringUnit" : {
             "state" : "translated",
@@ -312,6 +521,12 @@
     },
     "Network: %@" : {
       "localizations" : {
+        "es-419" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Red: %@"
+          }
+        },
         "es-US" : {
           "stringUnit" : {
             "state" : "translated",
@@ -322,6 +537,12 @@
     },
     "OK" : {
       "localizations" : {
+        "es-419" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "OK"
+          }
+        },
         "es-US" : {
           "stringUnit" : {
             "state" : "translated",
@@ -336,6 +557,12 @@
           "stringUnit" : {
             "state" : "new",
             "value" : "Performance Status: %1$@, %2$lld data points"
+          }
+        },
+        "es-419" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Estado de rendimiento: %@, %lld puntos de datos"
           }
         },
         "es-US" : {
@@ -354,6 +581,12 @@
             "value" : "Progress: %1$lld %2$@"
           }
         },
+        "es-419" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Progreso: %lld %@"
+          }
+        },
         "es-US" : {
           "stringUnit" : {
             "state" : "translated",
@@ -364,6 +597,12 @@
     },
     "Score" : {
       "localizations" : {
+        "es-419" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Puntaje"
+          }
+        },
         "es-US" : {
           "stringUnit" : {
             "state" : "translated",
@@ -374,6 +613,12 @@
     },
     "Select how often the app should refresh device metrics" : {
       "localizations" : {
+        "es-419" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Seleccione la frecuencia con la que la aplicación debe actualizar las métricas del dispositivo"
+          }
+        },
         "es-US" : {
           "stringUnit" : {
             "state" : "translated",
@@ -384,6 +629,12 @@
     },
     "Settings" : {
       "localizations" : {
+        "es-419" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Ajustes"
+          }
+        },
         "es-US" : {
           "stringUnit" : {
             "state" : "translated",
@@ -394,6 +645,12 @@
     },
     "Show or hide alert notifications in the app" : {
       "localizations" : {
+        "es-419" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Mostrar u ocultar notificaciones de alerta en la aplicación"
+          }
+        },
         "es-US" : {
           "stringUnit" : {
             "state" : "translated",
@@ -404,6 +661,12 @@
     },
     "Shows %@ trends over time" : {
       "localizations" : {
+        "es-419" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Muestra tendencias %@ a lo largo del tiempo"
+          }
+        },
         "es-US" : {
           "stringUnit" : {
             "state" : "translated",
@@ -414,6 +677,12 @@
     },
     "Shows %@ value with trend indicator" : {
       "localizations" : {
+        "es-419" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Muestra el valor %@ con el indicador de tendencia"
+          }
+        },
         "es-US" : {
           "stringUnit" : {
             "state" : "translated",
@@ -424,6 +693,12 @@
     },
     "Shows detailed device metrics including battery, memory, storage, and network" : {
       "localizations" : {
+        "es-419" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Muestra métricas detalladas del dispositivo, incluida la batería, la memoria, el almacenamiento y la red."
+          }
+        },
         "es-US" : {
           "stringUnit" : {
             "state" : "translated",
@@ -434,6 +709,12 @@
     },
     "Shows key device metrics including health score, battery, memory, and network status" : {
       "localizations" : {
+        "es-419" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Muestra métricas clave del dispositivo, incluido el puntaje de salud, la batería, la memoria y el estado de la red."
+          }
+        },
         "es-US" : {
           "stringUnit" : {
             "state" : "translated",
@@ -444,6 +725,12 @@
     },
     "Shows overall device health performance" : {
       "localizations" : {
+        "es-419" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Muestra el rendimiento general de la salud del dispositivo"
+          }
+        },
         "es-US" : {
           "stringUnit" : {
             "state" : "translated",
@@ -454,6 +741,12 @@
     },
     "System Version: %@" : {
       "localizations" : {
+        "es-419" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Versión del sistema: %@"
+          }
+        },
         "es-US" : {
           "stringUnit" : {
             "state" : "translated",
@@ -464,6 +757,12 @@
     },
     "Test #%lld" : {
       "localizations" : {
+        "es-419" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Prueba #%lld"
+          }
+        },
         "es-US" : {
           "stringUnit" : {
             "state" : "translated",
