--- a/Self Analytics/Self Analytics/Localizable.xcstrings
+++ b/Self Analytics/Self Analytics/Localizable.xcstrings
@@ -151,6 +151,7 @@
       }
     },
     "📱 %@" : {
+      "extractionState" : "stale",
       "localizations" : {
         "es-419" : {
           "stringUnit" : {
